--- a/src/Container/Events.css
+++ b/src/Container/Events.css
@@ -12,10 +12,13 @@ select {
   width: 100%;
   box-sizing: border-box;
 }
+
 .eventForm {
   padding: 30px;
   background-color: #fff;
   padding-bottom: 40px;
+  border-radius: 10px;
+  box-shadow: 0px 2px 8px grey;
 }
 .f-right {
   float: right;
